# queryset

./: .gitignore  pyproject.toml
app/: requirements.txt
app/config/: settings.py
